@@ -1,3 +1,14 @@
+1995-11-02  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/dedview.c: use 80th column
+
+1995-11-01  Thomas E. Dickey  <dickey@clark.net>
+
+	* user/ded.man: documented changes to dedtype.c
+
+	* src/dedtype.c:
+	rewrote to allow single-row scrolling, and to use 80th column
+
 1995-10-29  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/ftree.c: added guard for getwd failure in 'do_find()'
